--- a/code-system.html
+++ b/code-system.html
@@ -29,13 +29,13 @@
             </tr>
             <tr>
                 <td><a href="https://misac-tcu.github.io/code-system/body-site.html"
-                        target="_self">Body Site</a>
+                        target="_self">body-site</a>
                 </td>
                 <td>Topography of the body organ.</td>
             </tr>
             <tr>
                 <td><a href="https://misac-tcu.github.io/code-system/body-site-location.html"
-                        target="_self">Body Site Location</a>
+                        target="_self">body-site-location</a>
                 </td>
                 <td>Anatomy of the body organ. This is the sub-group of body site.</td>
             </tr>
