Move file to json folder

--- a/body-site-location.html
+++ b/body-site-location.html
@@ -422,7 +422,9 @@
 					}
 				]
 			};
-			
+		
+		var json_url= 'https://misac-tcu.github.io/code-system/json/body-site-location.json';
+		var excell_url= 'https://docs.google.com/spreadsheets/d/1BWfEycGShvNJQvzQaQz7Is2cGTUL9xmfJnxysjul9KQ/edit?usp=sharing';
 		document.getElementById("cs-header").innerHTML+= CodeSystem.name;
 		document.getElementById("cs-publisher").innerHTML+= CodeSystem.publisher;
 		document.getElementById("cs-url").innerHTML= CodeSystem.url;
@@ -431,7 +433,7 @@
 		document.getElementById("cs-title").innerHTML= CodeSystem.title;
 		document.getElementById("cs-status").innerHTML= CodeSystem.status;
 		document.getElementById("cs-description").innerHTML= CodeSystem.description;
-		document.getElementById("cs-source-resource").innerHTML= "json";
+		document.getElementById("cs-source-resource").innerHTML= " <a href='" + json_url + "'>json</a> | <a href='" + excell_url + "'>excell</a>";
 		
 		var table = document.getElementById("cs-content");
 		for (var i=0;i< CodeSystem.count ; i++)
