--- a/home.html
+++ b/home.html
@@ -45,9 +45,9 @@
         &#9826 Colon: <a href="https://www.radelement.org/home/elements/element/RDE79"
             target="blank">https://www.radelement.org/home/elements/element/RDE79</a><br>
         But for the present it will develop an independent location code system to collect all location value codes used
-        in all body organ (both liver, innestine, and breast radiography, etc), bellow is the Location Code System web
+        in all body organ (both liver, innestine, and breast radiography, etc), below is the Location Code System web
         link:
-        <a href="/newCodeSystem/LocationCS.html" target="blank">http://127.0.0.1:5500/newCodeSystem/LocationCS.html
+        <a href="https://misac-tcu.github.io/code-system/" target="blank">https://misac-tcu.github.io/code-system/
         </a>
     </p>
 
