--- a/code-system.html
+++ b/code-system.html
@@ -39,6 +39,12 @@
                 </td>
                 <td>Anatomy of the body organ. This is the sub-group of body site.</td>
             </tr>
+            <tr>
+                <td><a href="https://misac-tcu.github.io/code-system/annotation-type.html"
+                        target="_self">annotation-type</a>
+                </td>
+                <td>THe type of text-vector graphic use for anotate an image.</td>
+            </tr>
         </table>
     </form>
 </body>
