221030 change readme, add dicom metadata html in codesystem html

--- a/code-system.html
+++ b/code-system.html
@@ -45,6 +45,12 @@
                 </td>
                 <td>THe type of text-vector graphic use for anotate an image.</td>
             </tr>
+            <tr>
+                <td><a href="https://misac-tcu.github.io/code-system/dicom-metadata.html"
+                        target="_self">annotation-type</a>
+                </td>
+                <td>THe type of text-vector graphic use for anotate an image.</td>
+            </tr>
         </table>
     </form>
 </body>
