221030 change codesystem.html add dicom metadata list

--- a/code-system.html
+++ b/code-system.html
@@ -47,7 +47,7 @@
             </tr>
             <tr>
                 <td><a href="https://misac-tcu.github.io/code-system/dicom-metadata.html"
-                        target="_self">annotation-type</a>
+                        target="_self">dicom-metadata</a>
                 </td>
                 <td>THe type of text-vector graphic use for anotate an image.</td>
             </tr>
