221030 change codesystem.html

--- a/code-system.html
+++ b/code-system.html
@@ -43,13 +43,13 @@
                 <td><a href="https://misac-tcu.github.io/code-system/annotation-type.html"
                         target="_self">annotation-type</a>
                 </td>
-                <td>THe type of text-vector graphic use for anotate an image.</td>
+                <td>The type of text-vector graphic use for anotate an image.</td>
             </tr>
             <tr>
                 <td><a href="https://misac-tcu.github.io/code-system/dicom-metadata.html"
                         target="_self">dicom-metadata</a>
                 </td>
-                <td>THe type of text-vector graphic use for anotate an image.</td>
+                <td>Code system of DICOM define metadata. <br>Consist registry of DICOM Data Elements from <a href="https://dicom.nema.org/medical/dicom/current/output/chtml/part06/chapter_6.html">DICOM PS3.6 2022d - Data Dictionary</a></td>
             </tr>
         </table>
     </form>
