221031 change codesystem width

--- a/dicom-metadata.html
+++ b/dicom-metadata.html
@@ -86,7 +86,7 @@
 		getResource(FHIRServer, "CodeSystem", "/misac.codesystem.dicommetadata", FHIRResponseType, 'displayCodeSystem');
 		function displayCodeSystem(responseStr) {
 			var CodeSystem = JSON.parse(responseStr);
-			var excell_url = 'https://docs.google.com/spreadsheets/d/1BWfEycGShvNJQvzQaQz7Is2cGTUL9xmfJnxysjul9KQ/edit?usp=sharing';
+			var excell_url = 'https://docs.google.com/spreadsheets/d/1WBHQL1VKhJjVk-8IjwXwQz1QIGjdjegLPpJIGcom9Xw/edit#gid=0';
 			document.getElementById("cs-header").innerHTML += CodeSystem.name;
 			document.getElementById("cs-publisher").innerHTML += CodeSystem.publisher;
 			document.getElementById("cs-url").innerHTML = CodeSystem.url;
@@ -95,7 +95,7 @@
 			document.getElementById("cs-title").innerHTML = CodeSystem.title;
 			document.getElementById("cs-status").innerHTML = CodeSystem.status;
 			document.getElementById("cs-description").innerHTML = CodeSystem.description;
-			document.getElementById("cs-source-resource").innerHTML = " <a href='" + FHIRServer+ "CodeSystem/misac.codesystem.dicommetadata" + "'>json</a> | <a href='" + excell_url + "'>excell</a>";
+			document.getElementById("cs-source-resource").innerHTML = " <a href='" + FHIRServer+ "CodeSystem/misac.codesystem.dicommetadata" + "'>json</a> | <a href='" + excell_url + "'>excel</a>";
 
 			var table = document.getElementById("cs-content");
 			for (var i = 0; i < CodeSystem.count; i++) {
