--- a/annotation-type.html
+++ b/annotation-type.html
@@ -82,11 +82,10 @@
 	</form>
 
 	<script>
-		//var json_url = 'https://misac-tcu.github.io/code-system/json/body-site-location.json';
 		getResource(FHIRServer, "CodeSystem", "/misac.codesystem.annotationtype", FHIRResponseType, 'displayCodeSystem');
 		function displayCodeSystem(responseStr) {
 			var CodeSystem = JSON.parse(responseStr);
-			var excell_url = 'https://docs.google.com/spreadsheets/d/1BWfEycGShvNJQvzQaQz7Is2cGTUL9xmfJnxysjul9KQ/edit?usp=sharing';
+			var excell_url = 'https://docs.google.com/spreadsheets/d/1srMmXYB2LzJ7S596GKPuEiRiNaLawmc8XQVUt0cntlI/edit#gid=0';
 			document.getElementById("cs-header").innerHTML += CodeSystem.name;
 			document.getElementById("cs-publisher").innerHTML += CodeSystem.publisher;
 			document.getElementById("cs-url").innerHTML = CodeSystem.url;
@@ -95,7 +94,7 @@
 			document.getElementById("cs-title").innerHTML = CodeSystem.title;
 			document.getElementById("cs-status").innerHTML = CodeSystem.status;
 			document.getElementById("cs-description").innerHTML = CodeSystem.description;
-			document.getElementById("cs-source-resource").innerHTML = " <a href='" + FHIRServer+ "CodeSystem/misac.codesystem.annotationtype" + "'>json</a> | <a href='" + excell_url + "'>excell</a>";
+			document.getElementById("cs-source-resource").innerHTML = " <a href='" + FHIRServer+ "CodeSystem/misac.codesystem.annotationtype" + "'>json</a> | <a href='" + excell_url + "'>excel</a>";
 
 			var table = document.getElementById("cs-content");
 			for (var i = 0; i < CodeSystem.count; i++) {
