--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
         ul {
             list-style-type: none;
-            max-width: 960px;
+            width: 90%;
             margin: auto;
             overflow: hidden;
             background-color: #333;
@@ -40,13 +40,13 @@
 
 <body>
     <h1 align="center" style="font-size:25px;">FHIR Structured Report Code System </h1>
-    <ul align="center" width="1000px">
+    <ul align="center">
         <li><a href="home.html" target="myframe">Home</a></li>
         <li><a href="code-system.html" target="myframe">Code System</a>
 
         </li>
     </ul>
-    <p align="center"><iframe src="home.html" name="myframe" width="1000" height="1000"></iframe></p>
+    <p align="center"><iframe src="home.html" name="myframe" width="90%" height="1000"></iframe></p>
 
 </body>
 
